--- a/src/assets/scss/blocks/card.scss
+++ b/src/assets/scss/blocks/card.scss
@@ -1,13 +1,15 @@
 .cards {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .card {
   padding: 10px 30px 10px;
-  margin-left: 20px;
+  margin-bottom: 20px;
   position: relative;
 
-  width: 25%;
+  width: 18%;
 
   border-radius: 40px;
   border: 1px solid #f8f8f8;
@@ -31,6 +33,8 @@
 
 .card__describe {
   width: 100%;
+  height: 12%;
+
   font-size: 14px;
   font-weight: 400;
 }
@@ -77,6 +81,10 @@
     &:hover {
       opacity: 1;
     }
+  }
+
+  &.active {
+    background: linear-gradient(180deg, #89F09C 0%, #3CC755 100%);
   }
 }
 
