--- a/src/assets/scss/blocks/page.scss
+++ b/src/assets/scss/blocks/page.scss
@@ -54,6 +54,7 @@
   align-items: center;
 
   width: 300px;
+  height: 100px;
 
   padding: 0 30px;
   margin: 0 auto;
@@ -70,6 +71,7 @@
 }
 
 .page__items {
+  justify-content: space-between;
   overflow: auto;
 
   flex: 1 1 auto;
@@ -83,6 +85,7 @@
 }
 
 .page__item__content {
+  flex: 1;
   margin-right: 20px;
 }
 
