--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -35,3 +35,4 @@ body {
 @import "./blocks/header.scss";
 @import "./blocks/card.scss";
 @import "./blocks/panel.scss";
+@import "./blocks/panel.scss";
